# Kronos

./: .gitignore  PIP.tex  README.md
Cards/: CMakeLists.txt  card.cpp  card.h  deck.cpp  deck.h  main.cpp  player.cpp  player.h
Cards/include/: card.h  deck.h  player.h
Cards/src/: card.cpp  deck.cpp  main.cpp  player.cpp
Cards/test/: card_test.cpp  deck_test.cpp  player_test.cpp
Documents/: PIP.tex
Documents/Acceptance_Test_Procedures/: Acceptance Test Procedures.fdb_latexmk  Acceptance Test Procedures.fls  Acceptance Test Procedures.tex
Documents/Class_Diagrams/: Client_plantuml.txt  Hearts_plantuml.txt
Documents/Component_Diagram/: component_diagram.txt
Documents/PIP/: PIP.tex
Documents/SDD/: SDD.tex  Thumbs.db  client.uml
Documents/SDD -- Client/: SDD_Client.fdb_latexmk  SDD_Client.fls  SDD_Client.tex  Thumbs.db  client state uml.rtf  client.uml
Documents/SDD -- Hearts Logic/: SDD_Hearts_Server.tex
Documents/SRS/: SRS.tex
Documents/Software Design Description/: SDD.tex  SDD_Client.tex  SDD_Hearts_Server.tex  Software Design.tex
Documents/System Requirements Specification/: SRS.tex
Heartslogic/: CMakeLists.txt  Card.cpp  HeartsLogic.cpp  Player.h  heartsFunctions
TestClient/: CMakeLists.txt  Game.cpp  Game.h  chatClient.cpp  chat_message.hpp  main.cpp
demo hearts/: CMakeLists.txt  Card.cpp  HeartsGame.cpp  HeartsGame.h  Player.h  chatClient.cpp  main.cpp
hearts_spades_gui/: CMakeLists.txt  Findexternpro.cmake  README.md  extern_CMakeLists.txt
hearts_spades_gui/PlayerAPI/include/: Card.hpp  Player.hpp
hearts_spades_gui/PlayerAPI/src/: Card.cpp  Player.cpp
hearts_spades_gui/img/: prep_img.sh  rename.sh  scale.sh  shave.sh
hearts_spades_gui/include/: CreateGameDialog.hpp  CreateGameLayout.hpp  CreateUserDialog.hpp  CreateUserLayout.hpp  GameBoardLayout.hpp  HeartsGame.hpp  LobbyDialog.hpp  LobbyLayout.hpp  LoginDialog.hpp  LoginLayout.hpp  MainFrame.hpp  Player.hpp  RulesWindow.hpp  ServerDialog.hpp  SpadesGame.hpp
hearts_spades_gui/rules/: HeartsRules.txt  SpadesRules.txt
hearts_spades_gui/src/: CreateGameDialog.cpp  CreateGameLayout.cpp  CreateUserDialog.cpp  CreateUserLayout.cpp  GameBoardLayout.cpp  HeartsGame.cpp  LobbyDialog.cpp  LobbyLayout.cpp  LoginDialog.cpp  LoginLayout.cpp  MainFrame.cpp  Player.cpp  RulesWindow.cpp  ServerDialog.cpp  SpadesGame.cpp  app.cpp
hearts_spades_gui/test/: card_test.cpp  initializeDeck_test.cpp  player_test.cpp  wx_test.cpp
practice chat/Server/: Card.hpp  HeartsGame.cpp  HeartsGame.hpp  Player.cpp  Player.hpp  chatServer.cpp
wx_boost_example/: CMakeLists.txt  README.md
wx_boost_example/codegen/: cardHelper.py  clickHelper.py
wx_boost_example/img/: scale.sh  shave.sh
wx_boost_example/include/: GameFrame.h  MyFrame.h  wxDeck.h
wx_boost_example/src/: GameFrame.cpp  MyFrame.cpp  app.cpp  main.cpp  wxDeck.cpp
wx_boost_example/test/: boost_test.cpp  wx_text.cpp
